Fix for hidden text on mobile displays when the #fadeContainer element was drawn without a proper resize.

--- a/styles/e29.scss
+++ b/styles/e29.scss
@@ -283,6 +283,10 @@ a.e29Btn, .contact__btn {
   .carousel {
     padding: 2em 0 0em 0;
     margin-bottom: 2em;
+
+    #fadeContainer {
+      min-height: 200px;
+    }
   }
 
   .contact__mobile {
